# calcit

./: .gitattributes  .gitignore  .npmignore  .prettierrc  .rustfmt.toml  Agents.md  Cargo.toml  README.md  build.js  package.json  rust-toolchain.toml  tsconfig.json  webpack.config.js
.github/workflows/: publish.yaml  test.yaml
calcit/: .compact-inc.cirru  add.cirru  calcit.cirru  compact.cirru  fibo.cirru  test-algebra.cirru  test-cond.cirru  test-edn.cirru  test-enum-validation.cirru  test-enum.cirru  test-fn.cirru  test-generics.cirru  test-gynienic.cirru  test-hygienic.cirru  test-invalid-tag.cirru  test-ir-type-info.cirru  test-js.cirru  test-lens.cirru  test-list.cirru  test-macro.cirru  test-map.cirru  test-math.cirru  test-method-errors.cirru  test-method-validation.cirru  test-nested-types.cirru  test-nil.cirru  test-proc-type-warnings.cirru  test-record.cirru  test-recur-arity.cirru  test-recursion.cirru  test-set.cirru  test-string.cirru  test-sum-types.cirru  test-tag-match-validation.cirru  test-traits.cirru  test-tuple.cirru  test-types-inference.cirru  test-types.cirru  test.cirru  util.cirru
calcit/debug/: check-args.cirru  debug-overflow.cirru  macro-ns.cirru  var-shadow.cirru
calcit/editor/: calcit.cirru  compact.cirru
calcit/snapshots/: add.cirru  fibo.cirru  large-json.cirru  test-cond.cirru  test-fn.cirru  test-gynienic.cirru  test-js.cirru  test-json.cirru  test-lens.cirru  test-list.cirru  test-macro.cirru  test-map.cirru  test-math.cirru  test-nil.cirru  test-record.cirru  test-recursion.cirru  test-set.cirru  test-string.cirru  test-ternary.cirru  test.cirru  util.cirru
cirru/: calcit.cirru
docs/: Agents.md  CalcitAgent.md  cirru-syntax-guide.md  symbol-spec.md
drafts/: assert-types-plan.md  assert-types.md  generic-types-plan.md  generic-types.md  generics-struct-fn-proc-plan.md  last-session.md  record-struct-and-enum-plan.md  record-struct-and-enum-rfc.md  runtime-traits-plan.md
lib/: calcit-data.ts  calcit.procs.ts  custom-formatter.ts  record-procs.ts
scripts/: cp-version.js  main.js  main.mjs  profiling.sh
src/: builtins.rs  calcit.rs  call_stack.rs  call_tree.rs  cli_args.rs  codegen.rs  data.rs  detailed_snapshot.rs  lib.rs  main.rs  primes.rs  program.rs  runner.rs  snapshot.rs  util.rs
src/builtins/: effect.rs  effects.rs  ffi.rs  lists.rs  logics.rs  maps.rs  math.rs  meta.rs  records.rs  refs.rs  regexes.rs  sets.rs  strings.rs  syntax.rs
src/calcit/: calcit_struct.rs  calcit_trait.rs  eval_node.rs  fns.rs  list.rs  local.rs  proc_name.rs  record.rs  struct.rs  sum_type.rs  symbol.rs  syntax_name.rs  thunk.rs  tuple.rs  type_annotation.rs
src/cirru/: calcit-core.cirru
src/codegen/: emit_js.rs  gen_ir.rs
src/codegen/emit_js/: gen_stack.rs  internal_states.rs  snippets.rs
src/data/: cirru.rs  edn.rs  json.rs
src/mcp/: MCP_SETUP.md  calcit-command.toml  calcit_runner_handlers.rs  cirru_handlers.rs  cirru_utils.rs  config_handlers.rs  definition_handlers.rs  definition_update.rs  definition_utils.rs  dependency_doc_handlers.rs  docs_handlers.rs  document_handlers.rs  error_handling.rs  jsonrpc.rs  library_handlers.rs  mcp_handlers.rs  memory_handlers.rs  mod.rs  module_handlers.rs  namespace_handlers.rs  read_handlers.rs  state_manager.rs  tools.rs  validation.rs
src/primes/: eval_node.rs  finger_list.rs  fns.rs  keyword.rs  list.rs  proc_name.rs  symbol.rs  syntax_name.rs
src/program/: entry_book.rs
src/runner/: preprocess.rs  track.rs
src/util/: number.rs  string.rs
ts-src/: calcit-data.mts  calcit-data.ts  calcit.procs.mts  calcit.procs.ts  custom-formatter.mts  custom-formatter.ts  js-cirru.mts  js-cirru.ts  js-enum.mts  js-list.mts  js-list.ts  js-map.mts  js-map.ts  js-primes.mts  js-primes.ts  js-record.mts  js-record.ts  js-ref.mts  js-set.mts  js-set.ts  js-struct.mts  js-trait.mts  js-tuple.mts  js-tuple.ts
