[package]
name = "calcit"
version = "0.6.6"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Interpreter and js codegen for Calcit"
homepage = "http://calcit-lang.org"
documentation = "https://docs.rs/crate/calcit/"
repository = "https://github.com/calcit-lang/calcit.rs"
readme = "README.md"
exclude = [
  "lib/*",
  "calcit/*",
  "js-out/*",
  "scripts/*"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_edn = "0.2.20"
# cirru_edn = { path = "/Users/chenyong/repo/cirru/edn.rs" }
cirru_parser = "0.1.24"
clap = "3.2.22"
dirs = "4.0.0"
lazy_static = "1.4.0"
notify = "5.0.0"
# notify-debouncer-mini = "0.2.0"
walkdir = "2"
hex = "0.4.3"
rpds = "0.12.0"
im_ternary_tree = "0.0.11"
# im_ternary_tree = { path = "/Users/chenyong/repo/calcit-lang/ternary-tree.rs" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.7.3"
ctrlc = "3.2.3"

[lib]
name = "calcit"
path = "src/lib.rs"

[[bin]]
name = "cr"
path = "src/bin/cr.rs"

[[bin]]
name = "bundle_calcit"
path = "src/bin/bundle_calcit.rs"


# [profile.release]
# debug = true
