[package]
name = "calcit"
version = "0.8.51-a1"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Interpreter and js codegen for Calcit"
homepage = "http://calcit-lang.org"
documentation = "https://docs.rs/crate/calcit/"
repository = "https://github.com/calcit-lang/calcit.rs"
readme = "README.md"
exclude = [
  "lib/*",
  "calcit/*",
  "js-out/*",
  "scripts/*"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_edn = "0.6.4-a1"
# cirru_edn = { path = "/Users/chenyong/repo/cirru/edn.rs" }
cirru_parser = "0.1.29"
# cirru_parser = { path = "/Users/chenyong/repo/cirru/parser.rs" }
clap = "3.2.25"
dirs = "5.0.1"
lazy_static = "1.4.0"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
walkdir = "2.4.0"
hex = "0.4.3"
rpds = "1.1.0"
im_ternary_tree = "0.0.18"
# im_ternary_tree = { path = "/Users/chenyong/repo/calcit-lang/ternary-tree.rs" }
colored = "2.0.4"
strum = "0.25"
strum_macros = "0.25"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.8.1"
ctrlc = "3.4.1"

[lib]
name = "calcit"
path = "src/lib.rs"

[[bin]]
name = "cr"
path = "src/bin/cr.rs"

[[bin]]
name = "bundle_calcit"
path = "src/bin/bundle_calcit.rs"

[[bin]]
name = "caps"
path = "src/bin/calcit_deps.rs"

# [profile.release]
# debug = true
