
[package]
name = "calcit"
version = "0.10.9"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Interpreter and js codegen for Calcit"
homepage = "http://calcit-lang.org"
documentation = "https://docs.rs/crate/calcit/"
repository = "https://github.com/calcit-lang/calcit.rs"
readme = "README.md"
exclude = ["lib/*", "calcit/*", "js-out/*", "scripts/*"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cirru_edn = { path = "/Users/chenyong/repo/cirru/edn.rs" }
# cirru_parser = { path = "/Users/chenyong/repo/cirru/parser.rs" }
argh = "0.1.13"
dirs = "6.0.0"
notify = "8.0.0"
notify-debouncer-mini = "0.6.0"
walkdir = "2.5.0"
hex = "0.4.3"
rpds = "1.1.0"
im_ternary_tree = "0.0.19"
# im_ternary_tree = { path = "/Users/chenyong/repo/calcit-lang/ternary-tree.rs" }
colored = "3.0.0"
strum = "0.25"
strum_macros = "0.25"
serde = { version = "1.0", features = ["derive"] }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1.0"
schemars = "0.8"
cirru_edn = "0.7.1"
cirru_parser = "0.2.3"
bisection_key = "0.0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.8.6"
ctrlc = "3.4.5"

[lib]
name = "calcit"
path = "src/lib.rs"

[[bin]]
name = "cr"
path = "src/bin/cr.rs"

[[bin]]
name = "bundle_calcit"
path = "src/bin/bundle_calcit.rs"

[[bin]]
name = "caps"
path = "src/bin/calcit_deps.rs"

[[bin]]
name = "cr-sync"
path = "src/bin/cr_sync.rs"

[profile.release]
lto = true
opt-level = 3
